--- a/TimeTrackingWebApp/src/Employee/css/EmpProfile.css
+++ b/TimeTrackingWebApp/src/Employee/css/EmpProfile.css
@@ -70,3 +70,276 @@
   justify-content: space-evenly;
   align-items: center;
 }
+
+  /*? Select Module  */
+.slctmdl{
+  margin: 10% 2% 0 2%;
+}
+.modl1{
+  width: 49%;
+   display: inline-block; 
+   box-Shadow: 0 0 10px black;
+}
+.modl2{
+  width: 49%;
+  height: 90%;
+float: right; 
+box-Shadow: 0 0 10px black; 
+}
+.mdlpic1{
+width: 100%;
+}
+.mdlpic2{
+  width: 100%;
+  height: 330px;
+
+}
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+
+  /*? Select Module  */
+.slctmdl{
+  margin: 40% 2% 0 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.modl1{
+  width: 100%;
+   display:block; 
+   box-Shadow: 0 0 0px black;
+}
+.modl2{
+  width: 100%;
+   box-Shadow: 0 0 0px black;
+}
+.mdlpic1{
+width: 90%;
+margin-left: 5%;
+filter: drop-shadow(0 0 10px black);
+}
+.mdlpic2{
+  width: 90%;
+  height: 200px;
+margin-left: 5%;
+filter: drop-shadow(0 0 10px black);
+}
+
+/*? Employee Profile  */
+.Profile-title {
+  width: 70%;
+  height: 100%;
+  text-align: left;
+  font-size: 1.5rem;
+  padding-top: 6%;
+}
+.emp-main {
+  width: 100%;
+  height: 85%;
+  padding: 2%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.emp-pic {
+  width: 35%;
+}
+.emp-pic .picture {
+  width: 100%;
+  height: 100%;
+}
+.emp-pic .picture img {
+  width: 100%;
+}
+.emp-data {
+  width: 100%;
+  height: 40%;
+  /* border: 1px solid rgb(0, 255, 123); */
+}
+
+.emp-form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  /* border: 1px solid red; */
+}
+.emp-form-label {
+  font-size: 1rem;
+  color: #555;
+}
+.emp-time {
+  width: 100%;
+}
+.emp-time-work {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+ .slctmdl{
+  margin: 18% 2% 0 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1rem;
+}
+.modl1{
+  width: 100%;
+   display:block; 
+   box-Shadow: 0 0 0px black;
+}
+.modl2{
+  width: 100%;
+   box-Shadow: 0 0 0px black;
+}
+.mdlpic1{
+width: 80%;
+margin-left: 5%;
+filter: drop-shadow(0 0 10px black);
+}
+.mdlpic2{
+  width: 80%;
+  height: 350px;
+margin-left: 5%;
+filter: drop-shadow(0 0 10px black);
+
+}
+
+/*? Employee Profile  */
+.emp-profile-head {
+  width: 100%;
+  height: 10%;
+  padding: 2%;
+  display: flex;
+}
+.Profile-title {
+  font-size: 2rem;
+  padding-top: 6%;
+}
+.emp-main {
+  width: 100%;
+  height: 85%;
+  padding: 2%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.emp-pic {
+  width: 30%;
+}
+.emp-pic .picture {
+  width: 100%;
+  height: 100%;
+}
+.emp-pic .picture img {
+  width: 100%;
+}
+.emp-data {
+  width: 100%;
+  height: 40%;
+}
+
+.emp-form {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.emp-form-label {
+  font-size: 1.5rem;
+  color: #555;
+}
+.emp-time {
+  width: 100%;
+  height: 30%;
+  /* border: 1px solid red; */
+}
+.emp-time-work {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+ .slctmdl{
+  margin: 13% 2% 0 2%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 1rem;
+}
+.modl1{
+  width: 100%;
+   display:block; 
+   box-Shadow: 0 0 0px black;
+}
+.modl2{
+  width: 100%;
+  /* height: 330px; */
+   box-Shadow: 0 0 0px black;
+}
+.mdlpic1{
+width: 90%;
+margin-left: 5%;
+filter: drop-shadow(0 0 10px black);
+}
+.mdlpic2{
+  width: 90%;
+  height: 310px;
+margin-left: 5%;
+filter: drop-shadow(0 0 10px black);
+
+}
+/*? Employee Profile  */
+.emp-profile-head {
+  width: 100%;
+  height: 15%;
+  padding: 2%;
+  display: flex;
+}
+.Profile-title {
+  font-size: 2rem;
+  padding-top: 1%;
+}
+.emp-main {
+  width: 100%;
+  height: 85%;
+  padding: 2%;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+}
+.emp-pic {
+  width: 33.33%;
+}
+
+.emp-data {
+  width: 33.33%;
+  height: 80%;
+}
+
+.emp-time {
+  width: 33.33%;
+  height: 80%;
+  /* border: 1px solid red; */
+}
+
+} 
