--- a/TimeTrackingWebApp/src/Employee/css/FaceDetect.css
+++ b/TimeTrackingWebApp/src/Employee/css/FaceDetect.css
@@ -15,6 +15,7 @@
   border-radius: 3.1rem;
   text-align: center;
   font: var(--login-font-style);
+  font-size: 1rem;
   transition: 0.5s ease;
   position: absolute;
   top: 5%;
@@ -30,7 +31,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 300;
+  z-index: 2;
 }
 .emp-login-btn {
   width: 50%;
@@ -52,3 +53,103 @@
   padding: 0.5%;
   text-align: center;
 }
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .faccrossign {
+  width: 10%;
+  height: 6%;
+  right: 4%;
+  font-size: 2rem;
+}
+.emp-login-btn {
+  width: 30%;
+  position: absolute;
+  bottom: 17%;
+  left: 44%;
+}
+.pin-login-btn {
+  width: 30%;
+  /* height: 7%; */
+  position: absolute;
+  background-color: #516a89;
+  bottom: 5%;
+  right: 25%;
+  font: normal normal bold 1rem verdana;
+  padding-top: 2.5%;
+}
+.emp-webcam-box {
+  position: absolute;
+  top: 15%;
+  right: 5%;
+}
+
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+   .faccrossign {
+  width: 12%;
+  height: 7%;
+  right: 4%;
+  font-size: 3rem;
+}
+.emp-login-btn {
+  width: 20%;
+  position: absolute;
+  bottom: 10%;
+  left: 30%;
+  font-size: 220%;
+}
+.pin-login-btn {
+  width: 25%;
+  height: 9%;
+  position: absolute;
+  background-color: #516a89;
+  bottom: 10%;
+  right: 18%;
+  font: normal normal bold 1.6rem verdana;
+  padding-top: 1.2%;
+}
+.emp-webcam-box {
+  right: 15%;
+}
+
+ 
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .faccrossign {
+  width: 5%;
+  height: 7%;
+  right: 4%;
+  font-size: 2.3rem;
+}
+.emp-login-btn {
+  width: 13%;
+  position: absolute;
+  bottom: 10%;
+  left: 40%;
+  font-size: 1.7rem;
+}
+.pin-login-btn {
+  width: 15%;
+  height: 10%;
+  position: absolute;
+  background-color: #516a89;
+  bottom: 10%;
+  right: 28%;
+  font: normal normal bold 1.5rem verdana;
+  padding-top: 1.5%;
+}
+.emp-webcam-box {
+  position: absolute;
+  top: 15%;
+  right: 25%;
+}
+
+ 
+} 
