--- a/TimeTrackingWebApp/src/Organization/css/02-orgReger.css
+++ b/TimeTrackingWebApp/src/Organization/css/02-orgReger.css
@@ -19,7 +19,7 @@
 }
 
 .baero {
-  width: 8%;
+  width: 10%;
   height: 100%;
   float: left;
   text-align: center;
@@ -38,7 +38,7 @@
 }
 .regtitle {
   font: normal normal bold 1.9rem verdana;
-  width: 25%;
+  width: 40%;
   height: 100%;
   padding: 0.9rem 0px 0.25rem 0.5rem;
   display: inline-block;
@@ -46,7 +46,7 @@
 }
 
 .profilelogo {
-  width: 75%;
+  width: 50%;
   height: 100%;
   display: inline-block;
   position: absolute;
@@ -57,12 +57,12 @@
 .ppic {
   display: block;
   width: 10%;
-  height: 100%;
+  /* height: 100%; */
   float: right;
 }
 .plogo {
   width: 80%;
-  height: 100%;
+  /* height: 100%; */
   border-radius: 50%;
   object-fit: cover;
   transition: transform 0.2s ease-in-out;
@@ -166,9 +166,10 @@
   font: var(--font-style);
   color: white;
   box-shadow: 0px 0px 0.6rem black;
-  margin: 1% 0% 0% 33%;
+  margin: 1% 0% 0% 3%;
   text-align: center;
   cursor: pointer;
+  display: block;
 }
 
 .datasignup {
@@ -183,7 +184,7 @@
   border-radius: 2%;
   width: 75%;
   height: 100%;
-  margin: 3% 0% 0% 5%;
+  margin: 6% 0% 0% 5%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -192,13 +193,14 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  height: 80%;
+  height: 100%;
   width: 100%;
   justify-content: center;
   align-items: center;
+  padding-top: 5%;
 }
 .form-box-data {
-  width: 250px;
+  width: 40%;
   height: 50px;
   display: flex;
   flex-direction: column;
@@ -207,14 +209,14 @@
 .reglble {
   font: var(--font-style);
   display: inline-block;
-  margin: 1% 1% 0% 5%;
+  margin: 1% 1% 2% 5%;
+  
 }
 .reginpt {
   height: 70%;
   margin: 0% 1% 2% 2%;
-
   border: 0.1rem solid black;
-  padding: 1% 4% 1% 4%;
+  padding: 4% 4% 4% 4%;
   font: normal normal 500 0.9rem arial;
   outline: none;
 }
@@ -285,21 +287,29 @@
     opacity: 1;
   }
 }
-@media (max-width: 1024px), (max-height: 600px) {
-  .plogo,
-  #reglgobtn {
-    width: 30%;
-  }
-  .profile-img {
-    width: 50%;
-    height: 21vh;
-  }
-  .regOrg {
-    height: 100vh;
-  }
-}
+
 @media (max-width: 600px) {
-  .form-box-data {
+  
+ 
+}
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+.ppic {
+  width: 75%;
+}
+.profile-img {
+  width: 80%;
+  height: 18vh;
+}
+.datasignup {
+  width: 70%;
+  height: 90%;
+    margin-top: 5%;
+}
+.form-box-data {
     width: 150px;
     height: 50px;
   }
@@ -311,18 +321,51 @@
     width: 50%;
   }
   .custom-file-label {
-    width: 80%;
-    padding-top: 13%;
-    font-size: 1rem;
+    width: 70%;
+    padding-top: 5%;
+    font-size: 0.8rem;
+    display: block;
+    height: 10%;
+    margin-left: 8%;
   }
   .regOrg {
     height: 100vh;
   }
-  .datasignup {
-    margin-top: 10%;
-  }
-  .profile-img {
-    width: 71%;
-    height: 18vh;
-  }
+  .reginpt {
+  height: 50%;
+  margin: 0% 1% 2% 2%;
 }
+.form-box {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  height: 70%;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+ .ppic {
+  width: 25%;
+}
+.profile-img {
+  width: 80%;
+  height: 25vh;
+}
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+ .ppic {
+  width: 12%;
+}
+.profile-img {
+  width: 80%;
+  height: 45vh;
+  size: 5%;
+}
+} 
