--- a/TimeTrackingWebApp/src/Organization/css/04-orgDash.css
+++ b/TimeTrackingWebApp/src/Organization/css/04-orgDash.css
@@ -29,7 +29,7 @@
   height: 20%;
 }
 .logo {
-  width: 180px;
+  width: 80%;
   padding: 5% 0% 5% 30%;
 }
 .menu {
@@ -61,6 +61,7 @@ li {
   text-decoration: none;
   display: flex;
   align-items: center;
+  color: white;
 }
 
 .dashboard:hover {
@@ -76,7 +77,7 @@ li {
 
 .dblogo {
   width: 15%;
-  margin-top: 5px;
+  margin: 5%;
   float: left;
 }
 
@@ -119,7 +120,7 @@ li {
   position: relative;
 }
 .h2 {
-  font: normal normal bold 30px verdana;
+  font: normal normal bold 1.9rem verdana;
   width: 25%;
   height: 50%;
   text-align: center;
@@ -281,3 +282,113 @@ main .tabs .nonActive .par3 {
   background-color: white;
   opacity: 0.5;
 }
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+.App {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.asidetab {
+  width: 100%;
+  height: 20%;
+ 
+}
+
+.sideBar {
+  width: 100%;
+  height: 10%;
+   display: flex;
+  flex-direction: row;
+}
+.logodiv {
+  width: 20%;
+  height: 100%;
+}
+.logo {
+  width: 100%;
+  padding: 1% 0% 9% 5%;
+}
+.menu {
+  display: none;
+}
+.tab {
+  width: 80%;
+  height: 100%;
+  padding: 8px 5px 5px 5px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2%;
+}
+.dashboard{
+  width: 30%;
+  height: 40%;
+  font-size: 0.5rem;
+  font: normal normal 600 0.7rem verdana;
+  color: white;
+  padding: 8px 0px 8px 9px;
+  text-align: center;
+}
+
+.dblogo {
+  display: none;
+}
+.appname{
+  display: none;
+}
+.main {
+  width: 100%;
+  height: 100%;
+}
+.h2 {
+  font: normal normal bold 1.5rem verdana;
+  width: 65%;
+  height: 100%;
+  text-align: center;
+}
+main .tabs .totalOrg .h31 {
+  font: normal normal bold 0.8rem verdana;
+}
+main .tabs .nonActive .h33 {
+  font: normal normal bold 0.9rem verdana;
+}
+.bar-value{
+  display: none;
+}
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+ .dblogo {
+  width: 25%;
+  margin: 2%;
+}
+.h2 {
+  font: normal normal bold 1.9rem verdana;
+  width: 45%;
+  height: 50%;
+  text-align: center;
+  padding: 6% 0px 5px 0px;
+}
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+   .dblogo {
+  width: 25%;
+  margin: 6%;
+}
+ .h2 {
+  font: normal normal bold 1.9rem verdana;
+  width: 45%;
+  height: 100%;
+  text-align: left;
+  padding: 2% 0px 5px 2%;
+}
+} 
