--- a/TimeTrackingWebApp/src/Organization/css/empTableform.css
+++ b/TimeTrackingWebApp/src/Organization/css/empTableform.css
@@ -1,4 +1,5 @@
 .table-container {
+  width: 70%;
   padding: 20px;
   background-color: #f9f9f9;
   border-radius: 8px;
@@ -236,3 +237,75 @@
 .Hide {
   display: none;
 }
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .modal-content {
+  padding: 20px;
+  border-radius: 8px;
+  width: 95%;
+  height: 80%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  position: relative;
+  z-index: 1001;
+}
+.empPay-profile-img {
+  width: 70%;
+  height: 30%;
+  margin: 25px 0 20px 0;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #ddd;
+  filter: drop-shadow(0px 0px 5px black);
+}
+.table-container {
+  width: 100%;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  overflow-x: scroll;
+
+}
+.formedit {
+  width: 80%;
+  height: 300px;
+  margin-top: 5%;
+  box-shadow: 0px 0px 10px black;
+  gap: 25px;
+  padding: 40px 5px 5px 5px;
+}
+.formedit-label {
+  /* font-weight: bold;
+  color: #555;
+  width: 45%;
+  display: inline-block;
+  margin: 1% 1% 1% 3%; */
+  font-size: 0.7rem;
+}
+
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  .modal-content {
+  padding: 20px;
+  border-radius: 8px;
+  width: 80%;
+  height: 80%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+  position: relative;
+  z-index: 1001;
+}
+.table-container {
+  width: 100%;
+  padding: 20px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+}
+ 
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+ 
+} 
