--- a/TimeTrackingWebApp/src/Organization/css/mbarGraph.css
+++ b/TimeTrackingWebApp/src/Organization/css/mbarGraph.css
@@ -65,3 +65,26 @@
   font-size: 0.6rem;
   color: #333;
 }
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+.mbar-values{
+  display: none;
+}
+.mgtab {
+  width: 45%;
+  margin: 10px 20px;
+  padding: 0px 10px;
+}
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+ 
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+ 
+} 
